Updated readme with the Jetty timeout problem fix.